# midiguitar

./: midiguitar.scad
schematic/: midiguitarpcb.kicad_pcb  midiguitarpcb.kicad_prl  midiguitarpcb.kicad_pro  midiguitarpcb.kicad_sch
src/: .mxproject  CMakeLists.txt  STM32H743XX_FLASH.ld  midiguitar.ioc  src.ioc
src/Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
src/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
src/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
src/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usbd_conf.c  usbd_desc.c
src/cmake/: starm-clang.cmake
src/cmake/stm32cubemx/: CMakeLists.txt
src/fastf0nls/: CMakeLists.txt  audio2midi.c  lookup.c  lookup.h  midiguitar.c  midiguitar.h
