cmake_minimum_required(VERSION 3.22)
set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
project(fastf0nls)
set(CMSISCORE ${CMAKE_CURRENT_SOURCE_DIR}/CMSIS_5/CMSIS/Core)
set(DISABLEFLOAT16 ON)
add_compile_options(-Ofast)
add_subdirectory(CMSIS-DSP/Source)
add_library(fastf0nls STATIC midiguitar.c)
target_link_libraries(fastf0nls PRIVATE CMSISDSP m)
add_executable(audio2midi audio2midi.c)
target_link_libraries(audio2midi PRIVATE fastf0nls)
add_executable(lookup lookup.c)
target_link_libraries(lookup PRIVATE m)
